// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateGeoMetaData matches snap 1`] = `
[
  {
    "content": "mock-lat;mock-lon",
    "property": "geo.position",
  },
  {
    "content": "mock-city, mock-state, mock-country",
    "property": "geo.placename",
  },
  {
    "content": "mock-country",
    "property": "geo.region",
  },
]
`;

exports[`generateGeoMetaData should exclude state and country from geo.placename when not provided 1`] = `
[
  {
    "content": "mock-lat;mock-lon",
    "property": "geo.position",
  },
  {
    "content": "mock-city",
    "property": "geo.placename",
  },
]
`;

exports[`generateGeoMetaData should exclude state from geo.placename when not provided 1`] = `
[
  {
    "content": "mock-lat;mock-lon",
    "property": "geo.position",
  },
  {
    "content": "mock-city, mock-country",
    "property": "geo.placename",
  },
  {
    "content": "mock-country",
    "property": "geo.region",
  },
]
`;

exports[`generateMetaData matches snap 1`] = `
[
  {
    "content": "mock description",
    "name": "description",
  },
  {
    "content": "mock,keywords,comma,separated",
    "name": "keywords",
  },
  {
    "content": "36212898404",
    "property": "fb:app_id",
  },
  {
    "content": "Meetup",
    "property": "og:site_name",
  },
  {
    "content": "article",
    "property": "og:type",
  },
  {
    "content": "mock title",
    "property": "og:title",
  },
  {
    "content": "mock description",
    "property": "og:description",
  },
  {
    "content": "https://mock-base-url.com/fr-FR/mock/preview/path",
    "property": "og:url",
  },
  {
    "content": "https://www.meetup.com/mock-default-image.jpg",
    "property": "og:image",
  },
  {
    "content": "Meetup",
    "property": "al:android:app_name",
  },
  {
    "content": "com.meetup",
    "property": "al:android:package",
  },
  {
    "content": "375990038",
    "property": "al:ios:app_store_id",
  },
  {
    "content": "Meetup",
    "property": "al:ios:app_name",
  },
  {
    "content": "true",
    "property": "al:web:should_fallback",
  },
  {
    "content": "/mock/app/path",
    "property": "al:android:url",
  },
  {
    "content": "/mock/app/path",
    "property": "al:ios:url",
  },
  {
    "content": "https://mock-base-url.com/fr-FR/mock/preview/path",
    "property": "al:web:url",
  },
  {
    "content": "summary_large_image",
    "property": "twitter:card",
  },
  {
    "content": "@meetup",
    "property": "twitter:site",
  },
  {
    "content": "https://www.meetup.com/mock-default-image.jpg",
    "property": "twitter:image",
  },
  {
    "content": "mock description",
    "property": "twitter:description",
  },
  {
    "content": "375990038",
    "property": "twitter:app:id:iphone",
  },
  {
    "content": "Meetup",
    "property": "twitter:app:name:iphone",
  },
  {
    "content": "375990038",
    "property": "twitter:app:id:ipad",
  },
  {
    "content": "Meetup",
    "property": "twitter:app:name:ipad",
  },
  {
    "content": "com.meetup",
    "property": "twitter:app:id:googleplay",
  },
  {
    "content": "Meetup",
    "property": "twitter:app:name:googleplay",
  },
]
`;

exports[`generateMetaData should exlude meta entries with missing content 1`] = `
[
  {
    "content": "36212898404",
    "property": "fb:app_id",
  },
  {
    "content": "Meetup",
    "property": "og:site_name",
  },
  {
    "content": "article",
    "property": "og:type",
  },
  {
    "content": "Meetup",
    "property": "al:android:app_name",
  },
  {
    "content": "com.meetup",
    "property": "al:android:package",
  },
  {
    "content": "375990038",
    "property": "al:ios:app_store_id",
  },
  {
    "content": "Meetup",
    "property": "al:ios:app_name",
  },
  {
    "content": "true",
    "property": "al:web:should_fallback",
  },
  {
    "content": "summary_large_image",
    "property": "twitter:card",
  },
  {
    "content": "@meetup",
    "property": "twitter:site",
  },
  {
    "content": "375990038",
    "property": "twitter:app:id:iphone",
  },
  {
    "content": "Meetup",
    "property": "twitter:app:name:iphone",
  },
  {
    "content": "375990038",
    "property": "twitter:app:id:ipad",
  },
  {
    "content": "Meetup",
    "property": "twitter:app:name:ipad",
  },
  {
    "content": "com.meetup",
    "property": "twitter:app:id:googleplay",
  },
  {
    "content": "Meetup",
    "property": "twitter:app:name:googleplay",
  },
]
`;

exports[`generateMetaTags matches snapshot 1`] = `
[
  <meta
    content="mock description"
    name="description"
  />,
  <meta
    content="mock,keywords,comma,separated"
    name="keywords"
  />,
  <meta
    content="36212898404"
    property="fb:app_id"
  />,
  <meta
    content="Meetup"
    property="og:site_name"
  />,
  <meta
    content="article"
    property="og:type"
  />,
  <meta
    content="mock title"
    property="og:title"
  />,
  <meta
    content="mock description"
    property="og:description"
  />,
  <meta
    content="https://mock-base-url.com/fr-FR/mock/preview/path"
    property="og:url"
  />,
  <meta
    content="https://www.meetup.com/mock-default-image.jpg"
    property="og:image"
  />,
  <meta
    content="Meetup"
    property="al:android:app_name"
  />,
  <meta
    content="com.meetup"
    property="al:android:package"
  />,
  <meta
    content="375990038"
    property="al:ios:app_store_id"
  />,
  <meta
    content="Meetup"
    property="al:ios:app_name"
  />,
  <meta
    content="true"
    property="al:web:should_fallback"
  />,
  <meta
    content="/mock/app/path"
    property="al:android:url"
  />,
  <meta
    content="/mock/app/path"
    property="al:ios:url"
  />,
  <meta
    content="https://mock-base-url.com/fr-FR/mock/preview/path"
    property="al:web:url"
  />,
  <meta
    content="summary_large_image"
    property="twitter:card"
  />,
  <meta
    content="@meetup"
    property="twitter:site"
  />,
  <meta
    content="https://www.meetup.com/mock-default-image.jpg"
    property="twitter:image"
  />,
  <meta
    content="mock description"
    property="twitter:description"
  />,
  <meta
    content="375990038"
    property="twitter:app:id:iphone"
  />,
  <meta
    content="Meetup"
    property="twitter:app:name:iphone"
  />,
  <meta
    content="375990038"
    property="twitter:app:id:ipad"
  />,
  <meta
    content="Meetup"
    property="twitter:app:name:ipad"
  />,
  <meta
    content="com.meetup"
    property="twitter:app:id:googleplay"
  />,
  <meta
    content="Meetup"
    property="twitter:app:name:googleplay"
  />,
]
`;

exports[`getGroupKeywords matches snap for group with no topics 1`] = `"Test group,Albuquerque,NM,us"`;

exports[`getGroupKeywords matches snap for group with topics 1`] = `"hiking,beagles,programming,Test group,Albuquerque,NM,us"`;
